fixed autoscale off bug

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -26,7 +26,8 @@
     "\n",
     "from bokeh.io import curdoc\n",
     "from bokeh.layouts import column, row, layout\n",
-    "from bokeh.models import ColumnDataSource, Slider, TextInput, Toggle, Button, RadioButtonGroup, CustomJS, HoverTool\n",
+    "from bokeh.models import ColumnDataSource, Slider, TextInput, Toggle, Button, RadioButtonGroup\n",
+    "from bokeh.models import CustomJS, HoverTool\n",
     "from bokeh.models import PreText, CheckboxGroup, Paragraph\n",
     "from bokeh.plotting import figure\n",
     "from bokeh.models.widgets import Tabs, Panel\n",
@@ -269,7 +270,8 @@
     "        if A + B + C + D > 0:\n",
     "            countingCommand = 'S'+ str(i) + str(int(A)) + str(int(B)) + str(int(C)) + str(int(D)) + '\\n'\n",
     "            s.write(countingCommand.encode())\n",
-    "        # else (if the sum of A - D is 0), warn the user that this is not permitted. Do not send command to board\n",
+    "        # else (if the sum of A - D is 0), warn the user that this is not permitted. \n",
+    "        # Do not send command to board\n",
     "        else:\n",
     "            infoLabels[i].text = 'Counter ' + str(i) + ' must watch at least 1 port.'\n",
     "    \n",
@@ -906,9 +908,12 @@
     "\n",
     "        if currentGTR > yEndGTR or currentGTR < yStartGTR:   \n",
     "            rescaleCountGTR = 5\n",
+    "            \n",
+    "        maxRatio = max([currentRatioGT, currentRatioGR, currentRatioGTR])\n",
+    "        minRatio = min([currentRatioGT, currentRatioGR, currentRatioGTR])\n",
     "\n",
     "        # if any ratio goes above y range, use max & min value to extend y range\n",
-    "        if max([currentRatioGT, currentRatioGR, currentRatioGTR]) > yEndRatio or min([currentRatioGT, currentRatioGR, currentRatioGTR]) < yStartRatio:  \n",
+    "        if maxRatio > yEndRatio or minRatio < yStartRatio:  \n",
     "            rescaleCountRatio = 5\n",
     "        \n",
     "        # G2 will always be >= to adjusted g2, so no need to include a max function here\n",
@@ -1255,19 +1260,32 @@
     "        \n",
     "        # update the y range in terms of the average value of the most recet 5 points\n",
     "        # plots with multiple lines are not changed\n",
-    "        yStartG = 0.8 * np.mean(last5G)\n",
-    "        yStartT = 0.8 * np.mean(last5T)\n",
-    "        yStartR = 0.8 * np.mean(last5R)\n",
-    "        yStartGT = 0.8 * np.mean(last5GT)\n",
-    "        yStartGR = 0.8 * np.mean(last5GR)\n",
-    "        yStartGTR = 0.8 * np.mean(last5GTR)\n",
+    "        # only update if counts are not all zeros, otherwise do nothing\n",
+    "        if np.mean(last5G) > 0:\n",
+    "            yStartG = 0.8 * np.mean(last5G)\n",
+    "            yEndG = 1.2 * np.mean(last5G)\n",
     "        \n",
-    "        yEndG = 1.2 * np.mean(last5G)\n",
-    "        yEndT = 1.2 * np.mean(last5T)\n",
-    "        yEndR = 1.2 * np.mean(last5R)\n",
-    "        yEndGT = 1.2 * np.mean(last5GT)\n",
-    "        yEndGR = 1.2 * np.mean(last5GR)\n",
-    "        yEndGTR = 1.2 * np.mean(last5GTR)\n",
+    "        if np.mean(last5T) > 0:\n",
+    "            yStartT = 0.8 * np.mean(last5T)\n",
+    "            yEndT = 1.2 * np.mean(last5T)\n",
+    "        \n",
+    "        if np.mean(last5R) > 0:\n",
+    "            yStartR = 0.8 * np.mean(last5R)\n",
+    "            yEndR = 1.2 * np.mean(last5R)\n",
+    "            \n",
+    "        if np.mean(last5GT) > 0:\n",
+    "            yStartGT = 0.8 * np.mean(last5GT)\n",
+    "            yEndGT = 1.2 * np.mean(last5GT)\n",
+    "            \n",
+    "        if np.mean(last5GR) > 0:\n",
+    "            yStartGR = 0.8 * np.mean(last5GR)\n",
+    "            yEndGR = 1.2 * np.mean(last5GR)\n",
+    "            \n",
+    "        if np.mean(last5GTR) > 0:\n",
+    "            yStartGTR = 0.8 * np.mean(last5GTR)\n",
+    "            yEndGTR = 1.2 * np.mean(last5GTR)\n",
+    "            \n",
+    "            \n",
     "        \n",
     "        # update the y axis range\n",
     "        singleCountsGPlot.y_range.update(start = yStartG, end = yEndG)\n",
