added hovertool error message

--- a/ColorChangeTry.ipynb
+++ b/ColorChangeTry.ipynb
@@ -49,6 +49,9 @@
     "singleCountsPlot.line(x = 'timeList', y = 'singleCounts', source = source, line_width=3, line_alpha=0.6,\n",
     "                        line_color = 'orange')\n",
     "\n",
+    "singleCountsPlot.add_tools(HoverTool(renderers=[singleCountsCircles], tooltips=[(\"Time\",\"@timeList\"), \n",
+    "                        (\"Counts\",\"@singleCounts\")], mode='mouse'))\n",
+    "\n",
     "singleCountsPlot.y_range = Range1d(-1,101)\n",
     "\n",
     "# Set up START/STOP button, to start and stop counting\n",
@@ -79,10 +82,11 @@
     "    # if the random number is less than 31, then draw a gray point over the other point.\n",
     "    if randomValue < 31:\n",
     "        \n",
-    "        singleCountsPlot.circle(x = runningTime, y = randomValue, \n",
+    "        falseCircle = singleCountsPlot.circle(x = runningTime, y = randomValue, \n",
     "                            line_width=6, line_alpha=1.0, line_color = 'darkgrey')\n",
     "    \n",
-    "    \n",
+    "        singleCountsPlot.add_tools(HoverTool(renderers=[falseCircle], tooltips=[(\"Time\", str(runningTime)), \n",
+    "                        (\"Error\",\"False Zero\")], mode='mouse'))\n",
     "    \n",
     "    runningTime = runningTime + 1\n",
     "    \n",
