made marker size larger

--- a/ColorChangeTry.ipynb
+++ b/ColorChangeTry.ipynb
@@ -44,7 +44,7 @@
     "singleCountsPlot.x_range.range_padding_units = 'absolute'\n",
     "\n",
     "singleCountsCircles = singleCountsPlot.circle(x = 'timeList', y = 'singleCounts', source = source, \n",
-    "                                              line_width=6, line_alpha=0.6, line_color = 'orange')\n",
+    "                                              size=12, color = 'orange')\n",
     "\n",
     "singleCountsPlot.line(x = 'timeList', y = 'singleCounts', source = source, line_width=3, line_alpha=0.6,\n",
     "                        line_color = 'orange')\n",
@@ -83,7 +83,7 @@
     "    if randomValue < 31:\n",
     "        \n",
     "        falseCircle = singleCountsPlot.circle(x = runningTime, y = randomValue, \n",
-    "                            line_width=6, line_alpha=1.0, line_color = 'darkgrey')\n",
+    "                            size=12, color = 'darkgrey')\n",
     "    \n",
     "        singleCountsPlot.add_tools(HoverTool(renderers=[falseCircle], tooltips=[(\"Time\", str(runningTime)), \n",
     "                        (\"Error\",\"False Zero\")], mode='mouse'))\n",
