increased marker size

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -477,45 +477,42 @@
     "\n",
     "\n",
     "# Make each point of each plot a circle\n",
-    "singleCountsGPlot.circle(x = 'timeList', y = 'singleCountsG', source = source, line_width=6, line_alpha=0.6,\n",
-    "                        line_color = 'red')\n",
-    "singleCountsTPlot.circle(x = 'timeList', y = 'singleCountsT', source = source, line_width=6, line_alpha=0.6,\n",
-    "                        line_color = 'green')\n",
-    "singleCountsRPlot.circle(x = 'timeList', y = 'singleCountsR', source = source, line_width=6, line_alpha=0.6,\n",
-    "                        line_color = 'blue')\n",
+    "singleCountsGPlot.circle(x = 'timeList', y = 'singleCountsG', source = source, size = 12, color = 'red')\n",
+    "singleCountsTPlot.circle(x = 'timeList', y = 'singleCountsT', source = source, size = 12, color = 'green')\n",
+    "singleCountsRPlot.circle(x = 'timeList', y = 'singleCountsR', source = source, size = 12, color = 'blue')\n",
     "\n",
     "coincidenceCountsGTPlot.circle(x = 'timeList', y = 'coincidenceCountsGT', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'red')\n",
+    "                               size = 12, color = 'red')\n",
     "coincidenceCountsGRPlot.circle(x = 'timeList', y = 'coincidenceCountsGR', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'green')\n",
+    "                               size = 12, color = 'green')\n",
     "coincidenceCountsGTRPlot.circle(x = 'timeList', y = 'coincidenceCountsGTR', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'blue')\n",
+    "                               size = 12, color = 'blue')\n",
     "\n",
     "\n",
     "# Create scatter plots for the ratio plot and add their associated hover tools\n",
     "GTPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGT', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'red', legend_label=\"GT\")\n",
+    "                               size = 12, color = 'red', legend_label=\"GT\")\n",
     "ratioPlot.add_tools(HoverTool(renderers=[GTPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
     "                                (\"Coincidence\", \"GT\"), (\"Ratio\",\"@ratioCountsGT\")], mode='mouse'))\n",
     "\n",
     "GRPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGR', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'green', legend_label=\"GR\")\n",
+    "                               size = 12, color = 'green', legend_label=\"GR\")\n",
     "ratioPlot.add_tools(HoverTool(renderers=[GRPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
     "                                (\"Coincidence\", \"GR\"), (\"Ratio\",\"@ratioCountsGR\")], mode='mouse'))\n",
     "\n",
     "GTRPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGTR', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'blue', legend_label=\"GTR\")\n",
+    "                               size = 12, color = 'blue', legend_label=\"GTR\")\n",
     "ratioPlot.add_tools(HoverTool(renderers=[GTRPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
     "                                (\"Coincidence\", \"GTR\"), (\"Ratio\",\"@ratioCountsGTR\")], mode='mouse'))\n",
     "\n",
     "\n",
     "g2Points = g2Plot.circle(x = 'timeList', y = 'g2', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'purple', legend_label=\"G2\")\n",
+    "                               size = 12, color = 'purple', legend_label=\"G2\")\n",
     "g2Plot.add_tools(HoverTool(renderers=[g2Points], tooltips=[(\"Time\",\"@timeList\"),\n",
     "                        (\"g2\",\"@g2\"), (\"g2 (Accidental)\",\"@accidentalg2\")], mode='mouse'))\n",
     "\n",
     "adjustedg2Points = g2Plot.circle(x = 'timeList', y = 'adjustedg2', source = source, \n",
-    "                               line_width=6, line_alpha=0.6, line_color = 'orchid', \n",
+    "                               size = 12, color = 'orchid', \n",
     "                               legend_label=\"G2 (Adjusted)\")\n",
     "g2Plot.add_tools(HoverTool(renderers=[adjustedg2Points], tooltips=[(\"Time\",\"@timeList\"), \n",
     "                        (\"g2 (Adjusted)\",\"@adjustedg2\")], mode='mouse'))\n",
