added false zero marker color change and hovertool error message

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -493,17 +493,17 @@
     "GTPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGT', source = source, \n",
     "                               size = 12, color = 'red', legend_label=\"GT\")\n",
     "ratioPlot.add_tools(HoverTool(renderers=[GTPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
-    "                                (\"Coincidence\", \"GT\"), (\"Ratio\",\"@ratioCountsGT\")], mode='mouse'))\n",
+    "                                (\"Ratio\",\"@ratioCountsGT\")], mode='mouse'))\n",
     "\n",
     "GRPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGR', source = source, \n",
     "                               size = 12, color = 'green', legend_label=\"GR\")\n",
     "ratioPlot.add_tools(HoverTool(renderers=[GRPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
-    "                                (\"Coincidence\", \"GR\"), (\"Ratio\",\"@ratioCountsGR\")], mode='mouse'))\n",
+    "                                (\"Ratio\",\"@ratioCountsGR\")], mode='mouse'))\n",
     "\n",
     "GTRPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGTR', source = source, \n",
     "                               size = 12, color = 'blue', legend_label=\"GTR\")\n",
     "ratioPlot.add_tools(HoverTool(renderers=[GTRPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
-    "                                (\"Coincidence\", \"GTR\"), (\"Ratio\",\"@ratioCountsGTR\")], mode='mouse'))\n",
+    "                                (\"Ratio\",\"@ratioCountsGTR\")], mode='mouse'))\n",
     "\n",
     "\n",
     "g2Points = g2Plot.circle(x = 'timeList', y = 'g2', source = source, \n",
@@ -698,6 +698,10 @@
     "last5Ratio = np.zeros(15)\n",
     "last5G2 = np.zeros(10)\n",
     "\n",
+    "# define false zeros booleans\n",
+    "falseZeroG2 = False\n",
+    "falseZeroRatios = False\n",
+    "\n",
     "# Define a fuction to call when the current document (curdoc) has periodic callback on\n",
     "# This function appends new data to our plots through the stream data command\n",
     "def update_data():\n",
@@ -718,6 +722,9 @@
     "    global runningTime\n",
     "    \n",
     "    global autoscalingActive\n",
+    "    \n",
+    "    global falseZeroG2\n",
+    "    global falseZeroRatios\n",
     "    \n",
     "    # add the counting time to our running time\n",
     "    runningTime = runningTime + countingTime\n",
@@ -753,19 +760,17 @@
     "        currentRatioGTR = currentGTR/currentG\n",
     "    else:\n",
     "        #nan = float('nan')\n",
-    "        currentRatioGT = 0 # need to alert the user that this value is not a number\n",
+    "        currentRatioGT = 0\n",
     "        currentRatioGR = 0\n",
     "        currentRatioGTR = 0\n",
+    "        # need to alert the user that this value is not a number\n",
+    "        falseZeroRatios = True\n",
     "        \n",
     "    # g2 = NGTR * NG / (NGT * NGR)\n",
     "    # avoid dividing by zero \n",
     "    if currentGT*currentGR > 0:\n",
-    "        currentG2 = (currentGTR * currentG) / (currentGT * currentGR)\n",
-    "    else:\n",
-    "        #nan = float('nan')\n",
-    "        currentG2 = 0 # need to alert the user that this value is not a number\n",
     "        \n",
-    "    if currentGT > 0 and currentGR > 0:\n",
+    "        currentG2 = (currentGTR * currentG) / (currentGT * currentGR)\n",
     "        \n",
     "        a = (currentG*currentR*25*(10**(-9)))/(currentGR*countingTime)\n",
     "        b = (currentG*currentT*25*(10**(-9)))/(currentGT*countingTime)\n",
@@ -773,8 +778,12 @@
     "        currentAccidentalG2 = a + b\n",
     "        \n",
     "    else:\n",
+    "        #nan = float('nan')\n",
+    "        currentG2 = 0 \n",
+    "        currentAccidentalG2 = 0\n",
     "        \n",
-    "        currentAccidentalG2 = 0  # need to alert the user that this value is not a number\n",
+    "        # need to alert the user that this value is not a number\n",
+    "        falseZeroG2 = True\n",
     "        \n",
     "    currentAdjustedG2 = currentG2 - currentAccidentalG2\n",
     "    \n",
@@ -800,6 +809,27 @@
     "    \n",
     "    # Stream the new data to the plots.\n",
     "    source.stream(new_data)\n",
+    "    \n",
+    "    if falseZeroG2:\n",
+    "        \n",
+    "        falseCircle = g2Plot.circle(x = runningTime, y = currentG2, \n",
+    "                            size=12, color = 'darkgrey')\n",
+    "    \n",
+    "        g2Plot.add_tools(HoverTool(renderers=[falseCircle], tooltips=[(\"Time\", str(runningTime)), \n",
+    "                        (\"G2 Error\",\"False Zero\"), (\"Adjusted G2 Error\",\"False Zero\")], mode='mouse'))\n",
+    "        \n",
+    "        falseZeroG2 = False\n",
+    "        \n",
+    "    if falseZeroRatios:\n",
+    "        \n",
+    "        falseCircle = ratioPlot.circle(x = runningTime, y = currentRatioGT, \n",
+    "                            size=12, color = 'darkgrey')\n",
+    "    \n",
+    "        ratioPlot.add_tools(HoverTool(renderers=[falseCircle], tooltips=[(\"Time\", str(runningTime)), \n",
+    "                        (\"Error\",\"False Zeros\")], mode='mouse'))\n",
+    "        \n",
+    "        falseZeroRatios = False\n",
+    "    \n",
     "    \n",
     "    # use global variable\n",
     "    global yStartG\n",
