Create lists with fixed lengths instead of appending elements
Create lists with fixed lengths instead of appending elements in the set counters program

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -46,6 +46,15 @@
     "    s = serial.Serial('/dev/cu.usbmodem14101',baudrate=250000, timeout = 1) # open serial port; port name will \n",
     "                                                            # have to be changed on different computers\n",
     "\n",
+    "        \n",
+    "# Initialize the counter setting to those desired for G2 Alignment\n",
+    "s.write('S01000\\n'.encode())\n",
+    "s.write('S10100\\n'.encode())\n",
+    "s.write('S20010\\n'.encode())\n",
+    "s.write('S31100\\n'.encode())\n",
+    "s.write('S41010\\n'.encode())\n",
+    "s.write('S51110\\n'.encode())\n",
+    "\n",
     "\n",
     "# Define a class of objects called Counter. Each counter (0-7) will get a widget checkbox \n",
     "# for Port A through Port D   \n",
@@ -62,10 +71,10 @@
     "\n",
     "\n",
     "# Create Label Widgets for each Counter Row. Ex) the 0th row will say \"Counter 0:\"\n",
-    "counter_labels = []\n",
+    "counter_labels = [None] * 8\n",
     "\n",
     "for i in range(8):\n",
-    "    counter_labels.append(PreText(text='Counter: ' + str(i), width = 80, height = widgetHeight))\n",
+    "    counter_labels[i] = PreText(text='Counter: ' + str(i), width = 80, height = widgetHeight)\n",
     "    \n",
     "# define width of port labels\n",
     "portLabelWidth = 30\n",
@@ -101,12 +110,12 @@
     "# If counters[4].portD.active = [0], then this box is checked. \n",
     "# If counters[4].portD.active = [], then this box is not checked.\n",
     "\n",
-    "counters = []\n",
+    "counters = [None] * 8\n",
     "\n",
     "# loop through 8 times to create 4 widget checkboxes (portA, portB, portC, portD) \n",
     "# for each of counters 0 through 7\n",
     "for i in range(8):\n",
-    "    counters.append(Counter(CheckboxGroup(active=[], \n",
+    "    counters[i] = Counter(CheckboxGroup(active=[], \n",
     "                                            labels=[''], \n",
     "                                            width = CheckboxWidth, \n",
     "                                            height = widgetHeight),\n",
@@ -121,18 +130,18 @@
     "                           CheckboxGroup(active=[], \n",
     "                                            labels=[''], \n",
     "                                            width = CheckboxWidth, \n",
-    "                                            height = widgetHeight)))\n",
+    "                                            height = widgetHeight))\n",
     "    \n",
     "\n",
     "# create a list to store board settings in \n",
-    "boardSettings = []\n",
+    "boardSettings = [None] * 13\n",
     "\n",
     "# the first element of boardSettings will just be the title \"Board Settings:\"\n",
-    "boardSettings.append(PreText(text=\"\"\"Board Settings:\"\"\", width = 30, height = widgetHeight))\n",
+    "boardSettings[0] = PreText(text=\"\"\"Board Settings:\"\"\", width = 30, height = widgetHeight)\n",
     "\n",
     "# for the remaining 12 items, just append blank ' ' which can be changed later\n",
     "for i in np.arange(12):\n",
-    "    boardSettings.append(PreText(text=\"\"\" \"\"\", width = 30, height = widgetHeight))\n",
+    "    boardSettings[i+1] = PreText(text=\"\"\" \"\"\", width = 30, height = widgetHeight)\n",
     "\n",
     "\n",
     "# Define a function that can be called later. This function sends the 'P' command to the board, \n",
@@ -187,24 +196,24 @@
     "\n",
     "\n",
     "# Create info labels that can warn the user if an error is made (you cannot clear a counter)\n",
-    "infoLabels = []\n",
+    "infoLabels = [None] * 8\n",
     "\n",
     "# append blank text ' ' that can be changed later\n",
     "for i in range(8):\n",
-    "    infoLabels.append(PreText(text='', width = 400, height = widgetHeight))\n",
+    "    infoLabels[i] = PreText(text='', width = 400, height = widgetHeight)\n",
     "\n",
     "    \n",
     "# Create one horizontal box for each counter, which includes the port checkboxes\n",
-    "counterBoxes = []\n",
+    "counterBoxes = [None] * 8\n",
     "\n",
     "for i in range(8):\n",
-    "    counterBoxes.append(row([counter_labels[i], \n",
+    "    counterBoxes[i] = row([counter_labels[i], \n",
     "                               counters[i].portA, \n",
     "                               counters[i].portB, \n",
     "                               counters[i].portC, \n",
     "                               counters[i].portD, \n",
     "                               blank2,\n",
-    "                               infoLabels[i]]))\n",
+    "                               infoLabels[i]])\n",
     "    \n",
     "\n",
     "\n",
@@ -284,14 +293,8 @@
     "# call the send_info function when the button is clicked.\n",
     "set_button.on_click(send_info)\n",
     "\n",
-    "# Initialize the counter setting to those desired for G2 Alignment\n",
     "\n",
-    "s.write('S01000\\n'.encode())\n",
-    "s.write('S10100\\n'.encode())\n",
-    "s.write('S20010\\n'.encode())\n",
-    "s.write('S31100\\n'.encode())\n",
-    "s.write('S41010\\n'.encode())\n",
-    "s.write('S51110\\n'.encode())\n",
+    "\n",
     "\n",
     "\n",
     "# This portion of the code is for the Three Graphs\n",
@@ -1416,6 +1419,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1434,7 +1458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
