created two more columndatasources, fixed reset plot bug

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -339,6 +339,16 @@
     "    adjustedg2=[]\n",
     "    ))\n",
     "\n",
+    "sourceG2 = ColumnDataSource(dict(\n",
+    "    timeListG2=[],\n",
+    "    G2=[] \n",
+    "    ))\n",
+    "\n",
+    "sourceRatio = ColumnDataSource(dict(\n",
+    "    timeListRatio=[],\n",
+    "    Ratio=[] \n",
+    "    ))\n",
+    "\n",
     "\n",
     "# just commenting these out for now, can add them back later\n",
     "\n",
@@ -476,49 +486,7 @@
     "g2Plot.x_range.follow_interval = (numberPointsDisplayed)*countingTime\n",
     "g2Plot.x_range.range_padding = 0.1\n",
     "g2Plot.x_range.range_padding_units = 'absolute'\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Make each point of each plot a circle\n",
-    "singleCountsGPlot.circle(x = 'timeList', y = 'singleCountsG', source = source, size = 12, color = 'red')\n",
-    "singleCountsTPlot.circle(x = 'timeList', y = 'singleCountsT', source = source, size = 12, color = 'green')\n",
-    "singleCountsRPlot.circle(x = 'timeList', y = 'singleCountsR', source = source, size = 12, color = 'blue')\n",
-    "\n",
-    "coincidenceCountsGTPlot.circle(x = 'timeList', y = 'coincidenceCountsGT', source = source, \n",
-    "                               size = 12, color = 'red')\n",
-    "coincidenceCountsGRPlot.circle(x = 'timeList', y = 'coincidenceCountsGR', source = source, \n",
-    "                               size = 12, color = 'green')\n",
-    "coincidenceCountsGTRPlot.circle(x = 'timeList', y = 'coincidenceCountsGTR', source = source, \n",
-    "                               size = 12, color = 'blue')\n",
-    "\n",
-    "\n",
-    "# Create scatter plots for the ratio plot and add their associated hover tools\n",
-    "GTPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGT', source = source, \n",
-    "                               size = 12, color = 'red', legend_label=\"GT\")\n",
-    "ratioPlot.add_tools(HoverTool(renderers=[GTPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
-    "                                (\"Ratio\",\"@ratioCountsGT\")], mode='mouse'))\n",
-    "\n",
-    "GRPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGR', source = source, \n",
-    "                               size = 12, color = 'green', legend_label=\"GR\")\n",
-    "ratioPlot.add_tools(HoverTool(renderers=[GRPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
-    "                                (\"Ratio\",\"@ratioCountsGR\")], mode='mouse'))\n",
-    "\n",
-    "GTRPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGTR', source = source, \n",
-    "                               size = 12, color = 'blue', legend_label=\"GTR\")\n",
-    "ratioPlot.add_tools(HoverTool(renderers=[GTRPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
-    "                                (\"Ratio\",\"@ratioCountsGTR\")], mode='mouse'))\n",
-    "\n",
-    "\n",
-    "g2Points = g2Plot.circle(x = 'timeList', y = 'g2', source = source, \n",
-    "                               size = 12, color = 'purple', legend_label=\"G2\")\n",
-    "g2Plot.add_tools(HoverTool(renderers=[g2Points], tooltips=[(\"Time\",\"@timeList\"),\n",
-    "                        (\"g2\",\"@g2\"), (\"g2 (Accidental)\",\"@accidentalg2\")], mode='mouse'))\n",
-    "\n",
-    "adjustedg2Points = g2Plot.circle(x = 'timeList', y = 'adjustedg2', source = source, \n",
-    "                               size = 12, color = 'orchid', \n",
-    "                               legend_label=\"G2 (Adjusted)\")\n",
-    "g2Plot.add_tools(HoverTool(renderers=[adjustedg2Points], tooltips=[(\"Time\",\"@timeList\"), \n",
-    "                        (\"g2 (Adjusted)\",\"@adjustedg2\")], mode='mouse'))\n",
+    "        \n",
     "\n",
     "# Connect the points of each plot with a line\n",
     "singleCountsGPlot.line(x = 'timeList', y = 'singleCountsG', source = source, line_width=3, line_alpha=0.6,\n",
@@ -550,6 +518,62 @@
     "g2Plot.line(x = 'timeList', y = 'adjustedg2', source = source, \n",
     "                               line_width=3, line_alpha=0.6, line_color = 'orchid',\n",
     "                               legend_label=\"G2 (Adjusted)\")\n",
+    "\n",
+    "\n",
+    "# Make each point of each plot a circle\n",
+    "singleCountsGPlot.circle(x = 'timeList', y = 'singleCountsG', source = source, size = 12, color = 'red')\n",
+    "singleCountsTPlot.circle(x = 'timeList', y = 'singleCountsT', source = source, size = 12, color = 'green')\n",
+    "singleCountsRPlot.circle(x = 'timeList', y = 'singleCountsR', source = source, size = 12, color = 'blue')\n",
+    "\n",
+    "coincidenceCountsGTPlot.circle(x = 'timeList', y = 'coincidenceCountsGT', source = source, \n",
+    "                               size = 12, color = 'red')\n",
+    "coincidenceCountsGRPlot.circle(x = 'timeList', y = 'coincidenceCountsGR', source = source, \n",
+    "                               size = 12, color = 'green')\n",
+    "coincidenceCountsGTRPlot.circle(x = 'timeList', y = 'coincidenceCountsGTR', source = source, \n",
+    "                               size = 12, color = 'blue')\n",
+    "\n",
+    "# Create scatter plots for the ratio plot and add their associated hover tools\n",
+    "GTPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGT', source = source, \n",
+    "                               size = 12, color = 'red', legend_label=\"GT\")\n",
+    "ratioPlot.add_tools(HoverTool(renderers=[GTPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
+    "                                (\"Ratio\",\"@ratioCountsGT\")], mode='mouse'))\n",
+    "\n",
+    "GRPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGR', source = source, \n",
+    "                               size = 12, color = 'green', legend_label=\"GR\")\n",
+    "ratioPlot.add_tools(HoverTool(renderers=[GRPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
+    "                                (\"Ratio\",\"@ratioCountsGR\")], mode='mouse'))\n",
+    "\n",
+    "GTRPoints = ratioPlot.circle(x = 'timeList', y = 'ratioCountsGTR', source = source, \n",
+    "                               size = 12, color = 'blue', legend_label=\"GTR\")\n",
+    "ratioPlot.add_tools(HoverTool(renderers=[GTRPoints], tooltips=[(\"Time\",\"@timeList\"), \n",
+    "                                (\"Ratio\",\"@ratioCountsGTR\")], mode='mouse'))\n",
+    "\n",
+    "\n",
+    "g2Points = g2Plot.circle(x = 'timeList', y = 'g2', source = source, \n",
+    "                               size = 12, color = 'purple', legend_label=\"G2\")\n",
+    "g2Plot.add_tools(HoverTool(renderers=[g2Points], tooltips=[(\"Time\",\"@timeList\"),\n",
+    "                        (\"g2\",\"@g2\"), (\"g2 (Accidental)\",\"@accidentalg2\")], mode='mouse'))\n",
+    "\n",
+    "adjustedg2Points = g2Plot.circle(x = 'timeList', y = 'adjustedg2', source = source, \n",
+    "                               size = 12, color = 'orchid', \n",
+    "                               legend_label=\"G2 (Adjusted)\")\n",
+    "g2Plot.add_tools(HoverTool(renderers=[adjustedg2Points], tooltips=[(\"Time\",\"@timeList\"), \n",
+    "                        (\"g2 (Adjusted)\",\"@adjustedg2\")], mode='mouse'))\n",
+    "\n",
+    "\n",
+    "\n",
+    "falseCircleG2 = g2Plot.circle(x = 'timeListG2', y = 'G2', source = sourceG2,\n",
+    "                            size=12, color = 'darkgrey')\n",
+    "    \n",
+    "g2Plot.add_tools(HoverTool(renderers=[falseCircleG2], tooltips=[(\"Time\", \"@timeListG2\"), \n",
+    "                        (\"G2 Error\",\"False Zero\"), (\"Adjusted G2 Error\",\"False Zero\")], mode='mouse'))\n",
+    "\n",
+    "\n",
+    "falseCircleRatio = ratioPlot.circle(x = 'timeListRatio', y = 'Ratio', source = sourceRatio,\n",
+    "                            size=12, color = 'darkgrey')\n",
+    "    \n",
+    "ratioPlot.add_tools(HoverTool(renderers=[falseCircleRatio], tooltips=[(\"Time\", \"@timeListRatio\"), \n",
+    "                        (\"Error\",\"False Zeros\")], mode='mouse'))\n",
     "\n",
     "\n",
     "# Specify the location of the legend\n",
@@ -815,21 +839,23 @@
     "    \n",
     "    if falseZeroG2:\n",
     "        \n",
-    "        falseCircle = g2Plot.circle(x = runningTime, y = currentG2, \n",
-    "                            size=12, color = 'darkgrey')\n",
-    "    \n",
-    "        g2Plot.add_tools(HoverTool(renderers=[falseCircle], tooltips=[(\"Time\", str(runningTime)), \n",
-    "                        (\"G2 Error\",\"False Zero\"), (\"Adjusted G2 Error\",\"False Zero\")], mode='mouse'))\n",
+    "        new_data_G2 = dict(\n",
+    "            timeListG2=[runningTime],\n",
+    "            G2=[currentG2]\n",
+    "            )\n",
+    "        \n",
+    "        sourceG2.stream(new_data_G2)\n",
     "        \n",
     "        falseZeroG2 = False\n",
     "        \n",
     "    if falseZeroRatios:\n",
     "        \n",
-    "        falseCircle = ratioPlot.circle(x = runningTime, y = currentRatioGT, \n",
-    "                            size=12, color = 'darkgrey')\n",
-    "    \n",
-    "        ratioPlot.add_tools(HoverTool(renderers=[falseCircle], tooltips=[(\"Time\", str(runningTime)), \n",
-    "                        (\"Error\",\"False Zeros\")], mode='mouse'))\n",
+    "        new_data_Ratio = dict(\n",
+    "            timeListRatio=[runningTime],\n",
+    "            Ratio=[currentRatioGTR]\n",
+    "            )\n",
+    "        \n",
+    "        sourceRatio.stream(new_data_Ratio)\n",
     "        \n",
     "        falseZeroRatios = False\n",
     "    \n",
@@ -1161,6 +1187,10 @@
     "    # empty all data lists in source\n",
     "    source.data = {k: [] for k in source.data}\n",
     "    \n",
+    "    sourceG2.data = {k: [] for k in sourceG2.data}\n",
+    "    \n",
+    "    sourceRatio.data = {k: [] for k in sourceRatio.data}\n",
+    "    \n",
     "\n",
     "def change_callback_period(attr, old, new):\n",
     "    # use global variable\n",
@@ -1458,7 +1488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
