changed autoscaling toggle button to radio button group

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -633,7 +633,8 @@
     "saveDataButton = Button(label=\"Save Data\", width = 200)\n",
     "\n",
     "# Set up the autoscaling toggle button\n",
-    "autoscalingToggle = Toggle(label=\"Autoscaling ON\", active = True, width = 200)\n",
+    "autoscalingText = PreText(text = 'Autoscaling:', width=200)\n",
+    "autoscalingToggle = RadioButtonGroup(labels=[\"ON\",\"OFF\"], active = 0, width = 200)\n",
     "autoscalingActive = autoscalingToggle.active # keep track of the mode\n",
     "\n",
     "# Make a label reminding counter settings\n",
@@ -940,7 +941,7 @@
     "\n",
     "    \n",
     "    # Rescale y-axes only when the autoscaling is on\n",
-    "    if autoscalingActive:\n",
+    "    if autoscalingActive == 0:\n",
     "        \n",
     "        # check for spikes outside of y_range on all four plots\n",
     "        # if new point y value is outside of y_range, then change range\n",
@@ -1290,10 +1291,10 @@
     "    autoscalingActive = autoscalingToggle.active\n",
     "    \n",
     "    # update the label on the toggle button\n",
-    "    if autoscalingActive:\n",
-    "        autoscalingToggle.label = \"Autoscaling ON\"\n",
-    "    else:\n",
-    "        autoscalingToggle.label = \"Autoscaling OFF\"\n",
+    "    if autoscalingActive == 1:\n",
+    "        #autoscalingToggle.label = \"Autoscaling ON\"\n",
+    "        #else:\n",
+    "        #autoscalingToggle.label = \"Autoscaling OFF\"\n",
     "        \n",
     "        # use global variable\n",
     "        global yStartG\n",
@@ -1385,6 +1386,7 @@
     "                          numberPointsSlider,\n",
     "                          resetGraphButton,\n",
     "                          saveDataButton,\n",
+    "                          autoscalingText,\n",
     "                          autoscalingToggle\n",
     "                         )\n",
     "\n",
